Uploaded Company Name at the Footer of the Page to not be in all Caps - 8/19 @ 9:28 pm ---- v10

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg-100x89.png" rel="icon">
-  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg-100x89.png" rel="apple-touch-icon">
-
+  <!-- Favicons
+  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" rel="icon">
+  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" rel="apple-touch-icon">
+  -->
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -45,9 +45,9 @@
       </a> -->
 
       <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span>Solutions</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- Uncomment below if you prefer to use an image logo
       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="" class="img-fluid"></a>
-
+      -->
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
@@ -100,8 +100,8 @@
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Welcome to <span>SowITSolutions</span></h2>
-              <p>Welcome to SowITSolutions, where we deliver efficient IT solutions tailored to your business. From network security to cloud management, our experts provide proactive monitoring, rapid support, and strategic guidance, so you can focus on what matters most. Experience reliable, scalable MSP services with us and elevate your IT operations. Partner with us today to drive your business forward.</p>
-              <p>Please Contact Us to Find out More!</p>
+              <p>Welcome to SowITSolutions, where excellence and efficiency drive your IT success. We specialize in customized solutions, from network security to cloud management, ensuring seamless operations so you can focus on your core business. Our experts provide proactive monitoring, rapid response, and strategic guidance to help your business thrive. Experience reliability and peace of mind with our comprehensive MSP services. Partner with us today to elevate your IT experience.</p>
+              <p>Contact us to learn more!</p>
               <div class="text-center"><a href="contact.html" class="btn-get-started">Contact Us</a></div>
             </div>
           </div>
