--- a/pricing.html
+++ b/pricing.html
@@ -9,10 +9,10 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg-100x89.png" rel="icon">
-  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg-100x89.png" rel="apple-touch-icon">
-
+  <!-- Favicons
+  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" rel="icon">
+  <link href="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" rel="apple-touch-icon">
+  -->
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -45,9 +45,9 @@
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span>Solutions</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- Uncomment below if you prefer to use an image logo
       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="" class="img-fluid"></a>
-
+      -->
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -164,7 +164,7 @@
             <div class="box">
               <span class="advanced">Support</span>
               <h3>Hour Blocks</h3>
-              <h4><sup>$</sup>150<span> / per hour / per month</span></h4>
+              <h4><sup>$</sup>200<span> / per hour / per month</span></h4>
               <ul>
                 <li>5 Hour Blocks</li>
                 <li>10 Hour Blocks</li>
