Made more adjustments to the testimonials and as well as the Menu nav bar v12

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/SlideImage_v1.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Welcome to <span>SowITSolutions</span></h2>
@@ -108,18 +108,18 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/SlideImage_v2.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>About US</h2>
-              <p>Put Some filler text about your organization</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+              <h2>Pricing</h2>
+              <p>If you want to learn more about our pricing please click the button below!</p>
+              <div class="text-center"><a href="pricing.html" class="btn-get-started">Pricing</a></div>
             </div>
           </div>
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/SlideImage_v3.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>About My Org</h2>
@@ -274,72 +274,52 @@
 
         <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
-
-            <!-- Testimonial 1 -->
             <div class="carousel-item active">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
-                    SowITSolutions transformed our IT infrastructure. Their proactive monitoring and rapid response have made a huge difference.
-                    <i class="bi bi-quote quote-icon-right"></i>
-                  </p>
-                  <div class="client-info">
-                    <img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="Client Image">
-                    <div>
-                      <h3>Client 1</h3>
-                      <h4>CEO, Company</h4>
-                    </div>
-                  </div>
-                </div>
+              <div class="testimonial-item">
+                <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
+                <h3>Tom Leakar</h3>
+                <h4>London, UK</h4>
+                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+                <p>Excepteur sint occaecat cupidatat non proident...</p>
+              </div>
+              <div class="testimonial-item">
+                <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
+                <h3>John Doe</h3>
+                <h4>London, UK</h4>
+                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+                <p>Excepteur sint occaecat cupidatat non proident...</p>
+              </div>
+              <div class="testimonial-item">
+                <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
+                <h3>Jimmy Snow</h3>
+                <h4>London, UK</h4>
+                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+                <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
             </div>
-
-
-            <!-- Testimonial 2 -->
-            <!-- Testimonial 1 -->
-            <div class="carousel-item active">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
-                    SowITSolutions transformed our IT infrastructure. Their proactive monitoring and rapid response have made a huge difference.
-                    <i class="bi bi-quote quote-icon-right"></i>
-                  </p>
-                  <div class="client-info">
-                    <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" alt="Client Image">
-                    <div>
-                      <h3>Client 2</h3>
-                      <h4>CEO, Company</h4>
-                    </div>
-                  </div>
-                </div>
+            <div class="carousel-item">
+              <div class="testimonial-item">
+                <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
+                <h3>Mickey Mouse</h3>
+                <h4>London, UK</h4>
+                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+                <p>Excepteur sint occaecat cupidatat non proident...</p>
+              </div>
+              <div class="testimonial-item">
+                <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
+                <h3>Joe March</h3>
+                <h4>London, UK</h4>
+                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+                <p>Excepteur sint occaecat cupidatat non proident...</p>
+              </div>
+              <div class="testimonial-item">
+                <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
+                <h3>Akili!</h3>
+                <h4>London, UK</h4>
+                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+                <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
             </div>
-
-
-            <!-- Testimonial 3 -->
-            <!-- Testimonial 1 -->
-            <div class="carousel-item active">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
-                    SowITSolutions transformed our IT infrastructure. Their proactive monitoring and rapid response have made a huge difference.
-                    <i class="bi bi-quote quote-icon-right"></i>
-                  </p>
-                  <div class="client-info">
-                    <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" alt="Client Image">
-                    <div>
-                      <h3>Client 3</h3>
-                      <h4>CEO, Company</h4>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -350,7 +330,6 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
     </section><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
@@ -444,6 +423,16 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    var myCarousel = document.querySelector('#testimonialCarousel');
+    var carousel = new bootstrap.Carousel(myCarousel, {
+      interval: 3000, // Set interval for cycling
+      wrap: true
+    });
+  </script>
+
+
 
 </body>
 
