Made text edits for Akili's website ---- v11

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contact - SowITSolutions</title>
+  <title>Contact - SowIT</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span>Solutions</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo
       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="" class="img-fluid"></a>
       -->
@@ -129,13 +129,13 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@sowitsolutions.com<br></p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 (123) 456-7890<br>+1 (123) 456-7890</p>
+                  <p>+1 (313) 806-9261<br></p>
                 </div>
               </div>
             </div>
@@ -185,13 +185,14 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>SowITSolutions</h3>
+            <h3>SowIT Solutions</h3>
             <p>
-              Street Addy <br>
-              City, State ZIP<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 (123) 456 7890<br>
-              <strong>Email:</strong> info@example.com<br>
+              Operation Location: <br>
+              Southeast MI<br>
+              <br><br>
+              <strong>Phone:</strong> +1 (313) 806-9261<br>
+              <strong>Email:</strong> info@sowitsolutions.com<br><br>
+              <strong>Providing Solutions Since 2013!</strong>
             </p>
           </div>
 
