--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="SowIT Solutions Logo" class="img-fluid" style="height: 50px;">
       </a> -->
 
-      <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span>Solutions</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo
       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="" class="img-fluid"></a>
       -->
@@ -99,7 +99,7 @@
         <div class="carousel-item active" style="background-image: url(assets/img/slide/SlideImage_v1.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Welcome to <span>SowITSolutions</span></h2>
+              <h2>Welcome to <span>SowIT Solutions</span></h2>
               <p>Welcome to SowITSolutions, where excellence and efficiency drive your IT success. We specialize in customized solutions, from network security to cloud management, ensuring seamless operations so you can focus on your core business. Our experts provide proactive monitoring, rapid response, and strategic guidance to help your business thrive. Experience reliability and peace of mind with our comprehensive MSP services. Partner with us today to elevate your IT experience.</p>
               <p>Contact us to learn more!</p>
               <div class="text-center"><a href="contact.html" class="btn-get-started">Contact Us</a></div>
@@ -162,8 +162,9 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Onsite Support</li>
               <li><i class="ri-check-double-line"></i> Server Management</li>
-              <li><i class="ri-check-double-line"></i> Internet, ISP, and WiFi Infrastructure Setups</li>
+              <li><i class="ri-check-double-line"></i> Network Infrastructure - Internet, ISP, and WiFi Infrastructure Setups</li>
               <li><i class="ri-check-double-line"></i> Application Support</li>
+              <li><i class="ri-check-double-line"></i> VOIP/Phone Solutions</li>
               <li><i class="ri-check-double-line"></i> IT Network/Software Consulting and Solutions</li>
               <li><i class="ri-check-double-line"></i> Computer Management and Monitoring</li>
               <li><i class="ri-check-double-line"></i> Security Practice and Solutions</li>
@@ -179,7 +180,7 @@
     </section><!-- End About Us Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg">
+    <!-- <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
@@ -263,13 +264,13 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Testimonials</h2>
+          <h2>What our customers are saying…</h2>
         </div>
 
         <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -342,13 +343,14 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>SowITSolutions</h3>
+            <h3>SowIT Solutions</h3>
             <p>
-              Street Addy <br>
-              City, State ZIP<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 (123) 456 7890<br>
-              <strong>Email:</strong> info@example.com<br>
+              Operation Location: <br>
+              Southeast MI<br>
+              <br><br>
+              <strong>Phone:</strong> +1 (313) 806-9261<br>
+              <strong>Email:</strong> info@sowitsolutions.com<br><br>
+              <strong>Providing Solutions Since 2013!</strong>
             </p>
           </div>
 
