--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pricing - SowIT Solutions</title>
+  <title>Pricing - SowIT</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span>Solutions</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>SowIT</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo
       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/SowIT_Solutions_Logo_v1-removed_bg.png" alt="" class="img-fluid"></a>
       -->
@@ -115,7 +115,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="box featured">
               <h3>Fully Supported Users</h3>
-              <h4><sup>$</sup>25<span> / month</span></h4>
+              <h4><sup>$</sup>40<span> / month</span></h4>
               <ul>
                 <li>Computer Management</li>
                 <li>User's 365 Management</li>
@@ -131,7 +131,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
               <h3>Email Only Supported User</h3>
-              <h4><sup>$</sup>12.5<span> / month</span></h4>
+              <h4><sup>$</sup>20<span> / month</span></h4>
               <ul>
                 <li class="na">Computer Management</li>
                 <li>User's 365 Management</li>
@@ -146,12 +146,13 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box featured">
-              <h3>Extra Device Support</h3>
-              <h4><sup>$</sup>6.25<span> / month</span></h4>
+              <h3>Fully Supported Servers</h3>
+              <h4><sup>$</sup>100<span> / month</span></h4>
               <ul>
-                <li>Computer Management</li>
-                <li class="na">User's 365 Management</li>
-                <li class="na">Call Queue Support</li>
+                <li>Server Management</li>
+                <li>Disaster Recovery Plan/Backups</li>
+                <li>Security/Antivirus</li>
+                <li>Patch Managment</li>
                 <li>Remote Control Support</li>
               </ul>
               <!--<div class="btn-wrap">
@@ -254,13 +255,14 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>SowITSolutions</h3>
+            <h3>SowIT Solutions</h3>
             <p>
-              Street Addy <br>
-              City, State ZIP<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 (123) 456 7890<br>
-              <strong>Email:</strong> info@example.com<br>
+              Operation Location: <br>
+              Southeast MI<br>
+              <br><br>
+              <strong>Phone:</strong> +1 (313) 806-9261<br>
+              <strong>Email:</strong> info@sowitsolutions.com<br><br>
+              <strong>Providing Solutions Since 2013!</strong>
             </p>
           </div>
 
