--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Pricing</h2>
-              <p>If you want to learn more about our pricing please click the button below!</p>
+              <p>If you would like to explore our pricing options in greater detail, please click the button below. We offer a variety of packages tailored to meet your needs, and we would be happy to assist you in finding the perfect fit for your requirements. If you have any questions or need further assistance, please don't hesitate to reach out through our Contact Us page. Thank you for your interest!</p>
               <div class="text-center"><a href="pricing.html" class="btn-get-started">Pricing</a></div>
             </div>
           </div>
@@ -122,9 +122,12 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/SlideImage_v3.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>About My Org</h2>
-              <p>Put Some filler text about your organization</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+              <h2>Our Mission and Values</h2>
+              <p>At SowIT Solutions, we take pride in prioritizing your IT needs, allowing your company to focus on what you do best. We strive to be more than just a service provider; we aim to be a true partner and integral member of your team. Our goal is to deliver tailored solutions that foster a seamless environment, building the trust necessary for your business to operate as a well-oiled machine.</p>
+              <p>We are passionate about empowering our clients to become the heroes of their own stories. Our expertise lies in creating the ideal setups that transform your vision into reality.</p>
+              <p>Founded in 2013, we have dedicated ourselves to helping small businesses grow into successful enterprises. We manage our clients’ IT infrastructure, ensuring they remain up-to-date with the latest technology solutions in this rapidly evolving landscape. Our commitment is to provide not just IT services, but a genuine partnership for companies that seek support and guidance in their technological journey.</p>
+              <p>We love what we do and are excited to continue serving businesses that value collaboration and innovation.</p>
+              <!-- <div class="text-center"><a href="" class="btn-get-started">Read More</a></div> -->
             </div>
           </div>
         </div>
@@ -267,7 +270,7 @@
     </section> End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <!-- <section id="testimonials" class="testimonials">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>What our customers are saying…</h2>
@@ -280,22 +283,22 @@
                 <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
                 <h3>Tom Leakar</h3>
                 <h4>London, UK</h4>
-                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
-                <p>Excepteur sint occaecat cupidatat non proident...</p>
+                --><!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+              <!--  <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
               <div class="testimonial-item">
                 <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
                 <h3>John Doe</h3>
                 <h4>London, UK</h4>
-                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
-                <p>Excepteur sint occaecat cupidatat non proident...</p>
+                --><!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+               <!-- <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
               <div class="testimonial-item">
                 <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
                 <h3>Jimmy Snow</h3>
                 <h4>London, UK</h4>
-                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
-                <p>Excepteur sint occaecat cupidatat non proident...</p>
+               --> <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+               <!-- <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -303,22 +306,22 @@
                 <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
                 <h3>Mickey Mouse</h3>
                 <h4>London, UK</h4>
-                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
-                <p>Excepteur sint occaecat cupidatat non proident...</p>
+               --> <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+               <!-- <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
               <div class="testimonial-item">
                 <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
                 <h3>Joe March</h3>
                 <h4>London, UK</h4>
-                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
-                <p>Excepteur sint occaecat cupidatat non proident...</p>
+               --> <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+               <!-- <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
               <div class="testimonial-item">
                 <img src="assets/img/Client_Profile/TempProfileIMG01.jpg" class="testimonial-img" alt="">
                 <h3>Akili!</h3>
                 <h4>London, UK</h4>
-                <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
-                <p>Excepteur sint occaecat cupidatat non proident...</p>
+              -->  <!-- <div class="testimonial-stars">⭐⭐⭐⭐⭐</div> -->
+              <!--  <p>Excepteur sint occaecat cupidatat non proident...</p>
               </div>
             </div>
           </div>
@@ -331,7 +334,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-    </section><!-- End Testimonials Section -->
+    </section>--><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
 
@@ -383,25 +386,24 @@
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div> -->
+          <div class="me-md-auto text-center text-md-start">
+            <div class="copyright">
+              &copy; Copyright <strong><span>SowIT Solutions</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+              <!-- All the links in the footer should remain intact. -->
+              <!-- You can delete the links only if you purchased the pro version. -->
+              <!-- Licensing information: https://bootstrapmade.com/license/ -->
+              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
+              <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+            </div>
+          </div>
 
         </div>
       </div>
     </div>
 
     <div class="container d-md-flex py-4">
-
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Company</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          All the links in the footer should remain intact.
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
-        </div>
-      </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
