--- a/pricing.html
+++ b/pricing.html
@@ -112,22 +112,6 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
-            <div class="box featured">
-              <h3>Fully Supported Users</h3>
-              <h4><sup>$</sup>40<span> / month</span></h4>
-              <ul>
-                <li>Computer Management</li>
-                <li>User's 365 Management</li>
-                <li>Call Queue Support</li>
-                <li>Remote Control Support</li>
-              </ul>
-              <!--<div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>-->
-            </div>
-          </div>
-
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
               <h3>Email Only Supported User</h3>
@@ -137,6 +121,22 @@
                 <li>User's 365 Management</li>
                 <li>Call Queue Support</li>
                 <li class="na">Remote Control Support</li>
+              </ul>
+              <!--<div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>-->
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="box featured">
+              <h3>Fully Supported Users</h3>
+              <h4><sup>$</sup>40<span> / month</span></h4>
+              <ul>
+                <li>Computer Management</li>
+                <li>User's 365 Management</li>
+                <li>Call Queue Support</li>
+                <li>Remote Control Support</li>
               </ul>
               <!--<div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
@@ -186,7 +186,7 @@
     </section><!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq section-bg">
+    <!-- <section id="faq" class="faq section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -243,7 +243,7 @@
         </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section -->
+    </section>--><!-- End Frequently Asked Questions Section -->
 
   </main><!-- End #main -->
 
