--- a/index.html
+++ b/index.html
@@ -136,10 +136,7 @@
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Our Mission and Values</h2>
-              <p>At SowIT Solutions, we take pride in prioritizing your IT needs, allowing your company to focus on what you do best. We strive to be more than just a service provider; we aim to be a true partner and integral member of your team. Our goal is to deliver tailored solutions that foster a seamless environment, building the trust necessary for your business to operate as a well-oiled machine.</p>
-              <!-- <p>We are passionate about empowering our clients to become the heroes of their own stories. Our expertise lies in creating the ideal setups that transform your vision into reality.</p>-->
-              <p>Founded in 2013, we have dedicated ourselves to helping small businesses grow into successful enterprises. We manage our clients’ IT infrastructure, ensuring they remain up-to-date with the latest technology solutions in this rapidly evolving landscape. Our commitment is to provide not just IT services, but a genuine partnership for companies that seek support and guidance in their technological journey.</p>
-              <p>We love what we do and are excited to continue serving businesses that value collaboration and innovation.</p>
+              <p>At SowIT Solutions, we prioritize your IT needs, allowing your business to focus on what you do best. As your trusted partner since 2013, we deliver tailored solutions to keep your company running smoothly and up-to-date with evolving technology. Our mission is to empower clients, enabling them to achieve their goals with confidence. We’re passionate about creating setups that bring your vision to life and are committed to supporting businesses that value collaboration and innovation.</p>
               <!-- <div class="text-center"><a href="" class="btn-get-started">Read More</a></div> -->
             </div>
           </div>
