--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="#" class="twitter"><i class="bu bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bu bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bu bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+        <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -175,7 +175,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Onsite Support</li>
               <li><i class="ri-check-double-line"></i> Server Management</li>
-              <li><i class="ri-check-double-line"></i> Network Infrastructure - Internet, ISP, and WiFi Infrastructure Setups</li>
+              <li><i class="ri-check-double-line"></i> Network Infrastructure - Internet, ISP, and Wi-Fi Infrastructure Setups</li>
               <li><i class="ri-check-double-line"></i> Application Support</li>
               <li><i class="ri-check-double-line"></i> VOIP/Phone Solutions</li>
               <li><i class="ri-check-double-line"></i> IT Network/Software Consulting and Solutions</li>
