--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
         <a href="#" class="twitter"><i class="bu bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bu bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bu bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+        <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></a>
       </div>
 
     </div>
